--- a/app/views/wines/edit.html.erb
+++ b/app/views/wines/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Add a new wine') %>
-<h1>Add a new wine</h1>
+<% provide(:title, 'Edit wine profile') %>
+<h1>Edit wine profile</h1>
 
 <div class="row">
   <div class="span6 offset3">
@@ -23,7 +23,7 @@
 
       <p></p>
       	
-      <%= f.submit "Add wine", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
