--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,9 @@
 	<div class="span10 offset1 pagination-centered">
 		<h1>Welcome to the Wine App!</h1>
 
+		<%= link_to "Add a wine!", new_wine_path, class: "btn btn-large btn-primary" %>
+		<%= link_to "Rate a wine!", new_rating_path, class: "btn btn-large btn-primary" %>
+<!--
 		<div class="btn">
 			<div class="dropdown">
 				<a id="drop1" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button">
@@ -63,5 +66,8 @@
 		<legend><p></p></legend>
 
 		<div class="btn btn-primary">Submit!</div>
+
+-->
 	</div>
 </div>
+
