--- a/app/views/wines/new.html.erb
+++ b/app/views/wines/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@wine) do |f| %>
+    <%= form_for @wine do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :winery %>
@@ -22,6 +22,13 @@
       <%= f.text_field :region %>
 
       <p></p>
+
+      <%= f.fields_for :ratings do |builder| %>
+        <%= render 'rating_fields', f: builder %>
+      <% end %>
+
+      <%= link_to_add_fields "Rate it, too", f, :ratings %>
+
       	
       <%= f.submit "Add wine", class: "btn btn-large btn-primary" %>
     <% end %>
