--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -1,15 +1,9 @@
 <% provide(:title, full_name_for(@wine)) %>
 <div class="row">
-  <aside class="span4">
-    <section>
-      <h1>
-        <%=full_name_for @wine %>
-      </h1>
-        <%= @wine.varietal %>
-        <%= @wine.name %>
-        <%= @wine.vintage %>
-        <%= @wine.region %>
-        <%= link_to "edit", edit_wine_path(@wine) %>
-    </section>
-  </aside>
+  <div class="span12">
+    <h1>
+      <%=full_name_for @wine %>
+    </h1>
+    <%= render @wine %>
+  </div>
 </div>
